--- a/Website/packages.config
+++ b/Website/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="OctoPack" version="3.4.6" targetFramework="net45" developmentDependency="true" />
   <package id="WebMarkupMin.Core" version="2.0.0" targetFramework="net45" />
   <package id="xmlrpcnet" version="3.0.0.266" targetFramework="net45" />
   <package id="xmlrpcnet-server" version="3.0.0.266" targetFramework="net45" />
